# tenacious-bench

./: .env.example  .gitignore  LICENSE  README.md  ablation_results.json  baseline.md  blog_post.md  evidence_graph.json  evidence_graph_act4.json  memo.md  method.md  pyproject.toml  requirements.txt  submission_memo.md  upload_dataset.py  upload_model.py
agent/: email_agent.py  orchestrator.py  policies.py  reply_handler.py  scoring.py  sms_agent.py
app/: main.py
briefs/: models.py
data/: ai_signals.json  bench_summary.json  companies.json  company_signals.json  competitor_signals.json
enrichment/: ai_maturity.py  bench.py  competitor_gap.py  crunchbase.py  jobs.py  layoffs.py  mock_data.py  source_inventory.py
eval/: run_baseline.py  score_log.json
integrations/: calcom.py  email_client.py  hubspot.py  llm_client.py  sms_client.py  state_store.py  tracing.py
metrics/: final_metrics.json
pair_DAY_1/: collapse_detector_result.md  evening_call_summary.md  explainer_Amare.md  explainer_Yonas.md  grounding_commit.md  morning_call_summary.md  question.md  signoff.md  sources.md  thread.md
pair_DAY_2/: evening_call_summary.md  explainer.md  grounding_commit.md  morning_call_summary.md  peer_explainer.md  peer_question.md  question.md  signoff.md  sources.md  thread.md  tool_grounding_analysis.md
probes/: failure_taxonomy.md  probe_library.md  target_failure_mode.md
scripts/: audit_data_sources.py  compute_final_metrics.py  demo_act2.py  fetch_job_posts_playwright.py  fetch_leadership_signals.py  refresh_enrichment.py  run_demo.py  small_script_hubspot.py
(+622 files in other folders)
