[project]
name = "conversion-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "accelerate>=1.13.0",
    "beautifulsoup4>=4.14.3",
    "datasets>=4.8.5",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "huggingface-hub>=1.13.0",
    "langfuse>=4.3.1",
    "numpy>=2.4.4",
    "openai>=2.32.0",
    "peft>=0.19.1",
    "playwright>=1.58.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "sentence-transformers>=5.4.1",
    "transformers>=5.7.0",
    "trl>=1.3.0",
    "uvicorn>=0.46.0",
    "uvloop>=0.22.1",
]
